Remove asset issuance events and update dependencies
* Asset issuance events are not needed in this service and will be incompatible in epoch 182.
* Remove endpoints.
* Remove processing.
* Remove db code and table.
* Adapt tests.
* Update to go 1.25 and update all dependencies.
