# proto/transfers.pb.gw.go
@@ -154,58 +154,6 @@ func local_request_TransferService_GetAssetChangeEventsForTick_0(ctx context.Con
 
 }
 
-func request_TransferService_GetAssetIssuanceEventsForTick_0(ctx context.Context, marshaler runtime.Marshaler, client TransferServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq TickRequest
-	var metadata runtime.ServerMetadata
-
-	var (
-		val string
-		ok  bool
-		err error
-		_   = err
-	)
-
-	val, ok = pathParams["tick"]
-	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "tick")
-	}
-
-	protoReq.Tick, err = runtime.Uint32(val)
-	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "tick", err)
-	}
-
-	msg, err := client.GetAssetIssuanceEventsForTick(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
-func local_request_TransferService_GetAssetIssuanceEventsForTick_0(ctx context.Context, marshaler runtime.Marshaler, server TransferServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq TickRequest
-	var metadata runtime.ServerMetadata
-
-	var (
-		val string
-		ok  bool
-		err error
-		_   = err
-	)
-
-	val, ok = pathParams["tick"]
-	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "tick")
-	}
-
-	protoReq.Tick, err = runtime.Uint32(val)
-	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "tick", err)
-	}
-
-	msg, err := server.GetAssetIssuanceEventsForTick(ctx, &protoReq)
-	return msg, metadata, err
-
-}
-
 func request_TransferService_GetAssetChangeEventsForEntity_0(ctx context.Context, marshaler runtime.Marshaler, client TransferServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq EntityRequest
 	var metadata runtime.ServerMetadata
@@ -443,31 +391,6 @@ func RegisterTransferServiceHandlerServer(ctx context.Context, mux *runtime.Serv
 
 	})
 
-	mux.Handle("GET", pattern_TransferService_GetAssetIssuanceEventsForTick_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		var stream runtime.ServerTransportStream
-		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/qubic.transfers.proto.TransferService/GetAssetIssuanceEventsForTick", runtime.WithHTTPPathPattern("/api/v1/ticks/{tick}/events/asset-issuances"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := local_request_TransferService_GetAssetIssuanceEventsForTick_0(annotatedContext, inboundMarshaler, server, req, pathParams)
-		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
-		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
-		if err != nil {
-			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_TransferService_GetAssetIssuanceEventsForTick_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
 	mux.Handle("GET", pattern_TransferService_GetAssetChangeEventsForEntity_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -650,28 +573,6 @@ func RegisterTransferServiceHandlerClient(ctx context.Context, mux *runtime.Serv
 
 	})
 
-	mux.Handle("GET", pattern_TransferService_GetAssetIssuanceEventsForTick_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/qubic.transfers.proto.TransferService/GetAssetIssuanceEventsForTick", runtime.WithHTTPPathPattern("/api/v1/ticks/{tick}/events/asset-issuances"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := request_TransferService_GetAssetIssuanceEventsForTick_0(annotatedContext, inboundMarshaler, client, req, pathParams)
-		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
-		if err != nil {
-			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_TransferService_GetAssetIssuanceEventsForTick_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
 	mux.Handle("GET", pattern_TransferService_GetAssetChangeEventsForEntity_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -748,8 +649,6 @@ var (
 
 	pattern_TransferService_GetAssetChangeEventsForTick_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 2, 4, 2, 5}, []string{"api", "v1", "ticks", "tick", "events", "asset-transfers"}, ""))
 
-	pattern_TransferService_GetAssetIssuanceEventsForTick_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 2, 4, 2, 5}, []string{"api", "v1", "ticks", "tick", "events", "asset-issuances"}, ""))
-
 	pattern_TransferService_GetAssetChangeEventsForEntity_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 2, 4, 2, 5}, []string{"api", "v1", "entities", "identity", "events", "asset-transfers"}, ""))
 
 	pattern_TransferService_GetQuTransferEventsForTick_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 2, 4, 2, 5}, []string{"api", "v1", "ticks", "tick", "events", "qu-transfers"}, ""))
@@ -763,8 +662,6 @@ var (
 	forward_TransferService_GetAssetEventsForTick_0 = runtime.ForwardResponseMessage
 
 	forward_TransferService_GetAssetChangeEventsForTick_0 = runtime.ForwardResponseMessage
-
-	forward_TransferService_GetAssetIssuanceEventsForTick_0 = runtime.ForwardResponseMessage
 
 	forward_TransferService_GetAssetChangeEventsForEntity_0 = runtime.ForwardResponseMessage
 
